--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.5) 50%), url('https://images.unsplash.com/photo-1484544808355-8ec84e534d75?auto=format&fit=crop&w=1532&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');">
     <div class="banner-content">
 
-  <h1>Pages#home</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
-  <div class="btn btn-default sign-in-button">hello</div>
+  <h1>GlobeGetter</h1>
+  <p>The world has 195 countries. How many do you plan to visit?</p>
+  <div class="btn btn-default sign-in-button">Go</div>
 </div>
