--- a/app/views/countries/_index.html.erb
+++ b/app/views/countries/_index.html.erb
@@ -1,3 +1,7 @@
-<%= render partial: 'shared/card', collection: @countries %>
-<h1>countries partial index</h1>
+<% Country::CONTINENTS.each do |continent| %>
+  <h2><%= continent %></h2>
+  <%= render partial: 'shared/card', collection: @countries.where(continent: continent) %>
+<% end %>
+
+
 
