changed to two scrolly rows

--- a/app/views/countries/_index.html.erb
+++ b/app/views/countries/_index.html.erb
@@ -1,8 +1,8 @@
 <% Country::CONTINENTS.each_with_index do |continent| %>
   <h2><%= continent %></h2>
-  <% @countries.where(continent: continent).find_in_batches(batch_size: 15) do |fifteen_countries| %>
+  <% @countries.where(continent: continent).find_in_batches(batch_size: 30) do |thirty_countries| %>
       <div class="scrolling-wrapper">
-        <%= render partial: 'shared/card', collection: fifteen_countries %>
+        <%= render partial: 'shared/card', collection: thirty_countries %>
       </div>
   <% end %>
 <% end %>
