--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,19 @@
 @import "layouts/index";
 @import "components/index";
 @import "pages/index";
+
+.main-content {
+  min-height: 100vh;
+  display: block;
+}
+
+body {
+  &.page-registrations-new, &.page-pages-home, &.page-sessions-new {
+    background-image: linear-gradient(-225deg, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.45) 50%), url('https://images.unsplash.com/photo-1484544808355-8ec84e534d75?auto=format&fit=crop&w=1532&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');
+    background-size: cover;
+    background-repeat: no-repeat;
+    .navbar-wagon {
+      background-color: transparent;
+    }
+  }
+}
