--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,3 +1,18 @@
+.pink-logo {
+  color: #FF2A6B;
+}
+
+.banner-content {
+  margin-top: 30px;
+}
+
+.banner-content a {
+  color: rgba(255,255,255,1);
+  font-size: 15px;
+  font-weight: 300;
+  font-family: 'Lato', 'sans-serif';
+}
+
 .banner {
   color: white;
   // margin-top: -45px;
@@ -7,11 +22,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: -10;
   height: 100vh;
+  flex-direction: column;
 }
 
 .banner h1 {
@@ -23,7 +35,7 @@
   font-size: 30px;
   font-weight: lighter;
   color: rgb(255, 255, 255);
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 .banner .form-group {
