--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,12 +1,44 @@
-.sign-in-button {
-  border: solid red 1px;
-  border-radius: 20px;
+.globegetter-button-main {
+  border: solid rgba(255,255,255,0.45) 1.5px;
+  border-radius: 25px;
   background-color: transparent;
-  color: red;
-//  width: 70px;
+  color: rgba(255,255,255,1);
+  font-family: 'Lato', sans-serif;
+  font-size: 17px;
+  font-weight: 350;
+  min-height: 38px;
+  min-width: 110px;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
   &:hover{
-    background-color: blue;
+    background-color: #FF2A6B;
     color: white;
     cursor: pointer;
+    border: solid #FF2A6B 1.5px;
+    text-decoration: none;
+  }
+}
+
+.globegetter-button-pink {
+  border-radius: 15px;
+  background-color: rgba(255,42,107, 0.8);
+  color: white;
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 25px;
+  font-weight: 380;
+  min-height: 30px;
+  min-width: 90px;
+  text-align: center;
+  align-items: center;
+  //display: flex;
+  justify-content: center;
+//  width: 70px;
+  &:hover{
+    cursor: pointer;
+    font-family: 'Maven Pro', sans-serif;
+    text-decoration: underline;
+    color: white;
   }
 }
