--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,25 +1,29 @@
 /* Main navbar */
 .navbar-wagon {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  //background: white;
+  box-shadow: 0 1.5px 1px 0 rgba(255,255,255,0.45);
+  //box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-family: 'Lato', 'sans-serif';
+  font-size: 20px;
+  background-color: #362217;
 }
 
 /* Logo */
 .navbar-wagon-brand img {
-  height: 50px;
+  height: 20px;
 }
 
 /* User Avatar */
 .navbar-wagon .avatar {
-  height: 35px;
-  width: 35px;
+  height: 45px;
+  width: 45px;
   border-radius: 50%;
+  border: solid rgba(255,255,255,0.8) 2px;
 }
 
 /* Right section */
@@ -37,8 +41,13 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #616668;
-  font-size: 14px;
+  color: rgba(255,255,255,0.8);
+  //color: #616668;
+  font-size: 17px;
+  font-family: 'Lato', 'sans-serif';
+  &:hover{
+    color: #FF2A6B !important;
+  }
 }
 .navbar-wagon-link:hover {
   color: #da552f;
