--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,13 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.5) 50%), url('https://images.unsplash.com/photo-1484544808355-8ec84e534d75?auto=format&fit=crop&w=1532&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');">
-    <div class="banner-content">
+<div class="banner">
+  <div class="banner-content">
+    <h1>GlobeGetter</h1>
+    <!-- <h1>Globe<option class="pink-logo">Getter</option></h1> -->
+      <p>The world has 195 countries. How many do you want to visit?</p>
+      <form>
+        <div class="goal-set form-bottom-margin">
+          I want to visit <input type="number" name="countries"> countries in <input type="number" name="years"> years.
+        </div>
+        <div class="goal-set"><input type="submit" value="Start Your Journey" formaction="<%= new_user_registration_path %>"></div>
+      </form>
 
-  <h1>GlobeGetter</h1>
-  <p>The world has 195 countries. How many do you plan to visit?</p>
-  <div class="btn btn-default sign-in-button">Go</div>
 </div>
