--- a/app/views/shared/_navbar_no_user.html.erb
+++ b/app/views/shared/_navbar_no_user.html.erb
@@ -1,12 +1,12 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <a href="/" class="navbar-wagon-brand">
-    <%= image_tag('TaskIt_logo.png') %>
+    <%= image_tag('globe_getter_logo') %>
   </a>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
-    <%= link_to "Sign In", new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Sign In", new_user_session_path, class: "navbar-wagon-item globegetter-button-main" %>
   </div>
 
   <!-- Dropdown appearing on mobile only -->
@@ -14,7 +14,6 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><%= link_to "Sign Up", new_user_registration_path %></li>
         <li><%= link_to "Sign In", new_user_session_path %></li>
       </ul>
     </div>
