--- a/app/views/pages/destination_select.html.erb
+++ b/app/views/pages/destination_select.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="destinations-select-container">
 
   <div class="sidebar">
     <%= render partial: 'destinations/display_lists', locals: {destinations: @destinations} %>
