--- a/app/views/destinations/_list.html.erb
+++ b/app/views/destinations/_list.html.erb
@@ -1,6 +1,6 @@
 <div>
   <h3><%= header_content %></h3>
   <% destinations.each do |destination| %>
-    <%= render partial: "countries/card", object: destination.country %>
+    <%= render partial: "destinations/card", object: destination.country %>
   <% end %>
 </div>
