--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,13 @@
 <div class="banner">
   <div class="banner-content">
-    <h1>GlobeGetter</h1>
+    <!-- <h1>GlobeGetter</h1> -->
     <!-- <h1>Globe<option class="pink-logo">Getter</option></h1> -->
-      <p>The world has 195 countries. How many do you want to visit?</p>
+      <h1 class="homepage-margin">The world has 195 countries. How many do you want to visit?</h1>
       <form>
         <div class="goal-set form-bottom-margin">
           I want to visit <input type="number" name="countries"> countries in <input type="number" name="years"> years.
         </div>
-        <div class="goal-set"><input type="submit" value="Start Your Journey" formaction="<%= new_user_registration_path %>"></div>
+        <div class="goal-set"><input type="submit" value="Start My Journey" formaction="<%= new_user_registration_path %>"></div>
       </form>
 
 </div>
