--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,15 @@
-<div class="footer">
-  <p>hello</p>
+<div class="footer-container">
+  <div class="footer-item">
+    <h1>Contact Us</h1>
+    <p>5333 Avenue Casgrain</p>
+    <p>Suite 102</p>
+    <p>Montréal, Québec</p>
+    <p>H2T 1X3</p>
+  </div>
+  <div class="footer-item">
+    <h1>About Us</h1>
+    <p>Made with love by batch #98</p>
+    <p>@ Le Wagon Montréal</p>
+  </div>
 </div>
 
