--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,3 +1,7 @@
+.homepage-margin {
+  margin-top: -50px;
+}
+
 .pink-logo {
   color: #FF2A6B;
 }
@@ -27,10 +31,12 @@
 }
 
 .banner h1 {
-  font-size: 60px;
-  font-weight: bold;
+  //font-size: 60px;
+  font-size: 40px;
+  font-weight: 400;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 }
+
 .banner p {
   font-size: 30px;
   font-weight: lighter;
