--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,8 +6,8 @@
       <%= f.error_notification %>
 
         <div class="goal-set">
-          I want to visit <%= f.input :number_countries, input_html: {value: params[:countries]} %> in
-          <%= f.input :years, input_html: {value: params[:years]} %> years.
+          I want to visit <%= f.input :number_countries, input_html: {value: params[:countries]}, label: false %> countries in
+          <%= f.input :years, input_html: {value: params[:years]}, label: false %> years.
         </div>
           <%= f.input :email, required: true, autofocus: true, placeholder: "placeholder text" %>
           <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
