fixed navbar styles including paths

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -3,7 +3,7 @@
 * ------------------------------------- */
 
 .alert {
-  margin: 0;
+  margin-top: 28px;
   text-align: center;
   background-color: rgba(255,255,255,0.3);
   border: 0;
@@ -13,7 +13,11 @@
 }
 .alert-info {
   color: #FF2A6B;
+  font-family: 'Lato', 'sans-serif' !important;
+  font-size: 19px;
 }
 .alert-warning {
-  color: $red;
+  color: #cc0000;
+  font-family: 'Lato', 'sans-serif' !important;
+  font-size: 19px;
 }
