--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,8 @@
 }
 
 body {
+  background-color: #F4F4F4;
+  //background-image: url('arches.png');
   &.page-registrations-new, &.page-pages-home, &.page-sessions-new {
     background-image: linear-gradient(-225deg, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.45) 50%), url('https://images.unsplash.com/photo-1484544808355-8ec84e534d75?auto=format&fit=crop&w=1532&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');
     background-size: cover;
@@ -29,3 +31,4 @@ body {
     }
   }
 }
+
