--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
       <!-- Links when logged in -->
       <%= link_to "Destinations", destination_select_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Map", map_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Profile", user_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Dashboard", user_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
