--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <link rel="icon" href="images/globe-getter-logo.png">
+    <%= favicon_link_tag 'favicon.ico' %>
+
+    <!-- <link rel="icon" href="images/globe-getter-logo.png"> -->
   </head>
   <body>
     <body class="page-<%= controller_name %>-<%= action_name %>">
