--- a/app/views/destinations/_card.html.erb
+++ b/app/views/destinations/_card.html.erb
@@ -1,19 +1,27 @@
+<!-- expecting "card" to be a Destination -->
+
 <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=1950&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);">
-    <div class="card-category"></div>
+   <div class="card-category"></div>
     <div class="card-description">
 
-      <h2>   <%= link_to card.name, country_path(card)%></h2>
+      <h2><%= link_to card.country.name, country_path(card.country)%></h2>
       <div class="icons">
-        <%= link_to destinations_path(destination: {country_id: card.id, priority: true, has_been: false}), method: :post do %>
-          <i class="fa fa-star-o" aria-hidden="true"></i>
+        <!-- For all cards, let the user delete the destination -->
+        <%= link_to destination_path(card), method: :delete do %>
+          <i class="fa fa-minus-circle" aria-hidden="true"></i>
         <% end %>
-        <%= link_to destinations_path(destination: {country_id: card.id, priority: false, has_been: false}), method: :post do %>
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        <!-- Unless they've visited already, show a check -->
+        <% unless card.has_been %>
+          <%= link_to destination_path(card, destination: {country_id: card.id, has_been: true}), method: :patch do %>
+            <i class="fa fa-check-circle-o" aria-hidden="true"></i>
+          <% end %>
         <% end %>
-        <%= link_to destinations_path(destination: {country_id: card.id, priority: false, has_been: true}), method: :post do %>
-          <i class="fa fa-check-circle-o" aria-hidden="true"></i>
+        <!-- For non-prority cards that they haven't visited -->
+        <% unless card.has_been || card.priority %>
+          <%= link_to destination_path(card, destination: {country_id: card.id, priority: true}), method: :patch do %>
+            <i class="fa fa-star-o" aria-hidden="true"></i>
+          <% end %>
         <% end %>
-
       </div>
     </div>
 </div>
