--- a/app/views/pages/destination_select.html.erb
+++ b/app/views/pages/destination_select.html.erb
@@ -4,6 +4,6 @@
     <%= render partial: 'destinations/display_lists', locals: {destinations: @destinations} %>
   </div>
 
-    <%= render partial: 'countries/display_lists', countries: @countries %>
+    <%= render partial: 'countries/display_lists', locals: {countries: @countries} %>
 
 </div>
