all info on dashboard showing correctly

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,40 @@
 <div class="background">
 
-  <h1><%= @user.first_name %> <%= @user.last_name %></h1>
-  <h2><%= @user.email %> </h2>
+  <h1> Hello <%= @user.first_name %>, </h1>
+  <!-- <h2><%= @user.email %> </h2> -->
   <h3> Your goal is to visit <%= @user.number_countries %> countries over the next
   <%= @user.years %> years. Keep up the hard work!! </h3>
+
   <% denomenator = @user.years.to_f %>
-  <% numerator = @user.number_countries.to_f %>
+
+  <% if !@destinations.where(status: 1).empty? %>
+    <% numerator = @user.number_countries.to_f - @destinations.where(status: 1).length%>
+  <% else %>
+    <% numerator = @user.number_countries.to_f %>
+  <% end %>
   <% result = numerator/denomenator %>
-  <h3> If you visit <%= result.round %> countries every year, you will complete your goal! </h3>
-  <h3> Here are your priority countries: </h3>
+
+  <h3>So far, you have visited <%= @destinations.where(status: 1).length %> countries out of your goal of <%= @user.number_countries %></h3>
+
+  <h3> If you visit about <%= result.round %> countries every year, you will complete your goal! </h3>
+
+  <% if !@destinations.where(status: 3).empty? %>
+    <h3> Here are your priority countries: </h3>
+  <% end %>
   <div class="scrolling-wrapper">
     <%= render partial: 'destinations/card', collection: @user.destinations.where(status: 3) %>
   </div>
 
-  <h3> Here is a list of places you would like to visit. </h3>
+  <% if !@destinations.where(status: 2).empty? %>
+    <h3> Here is a list of places you would like to visit. </h3>
+  <% end %>
   <div class="scrolling-wrapper">
     <%= render partial: 'destinations/card', collection: @user.destinations.where(status: 2) %>
   </div>
 
+<% if !@destinations.where(status: 1).empty? %>
   <h3> And here is a list of places you have been!! </h3>
+<% end %>
   <div class="scrolling-wrapper">
     <%= render partial: 'destinations/card', collection: @user.destinations.where(status: 1) %>
   </div>
