--- a/app/assets/stylesheets/pages/destination_select.scss
+++ b/app/assets/stylesheets/pages/destination_select.scss
@@ -1,26 +1,34 @@
-
 .destinations-select-container {
-    display: flex;
-    align-items: space-between;
-    flex-direction: row;
-    position: absolute;
-    top: 70px;
-    &>div {
-      padding: 2vh 1vw;
-    }
+  display: flex;
+  align-items: space-between;
+  flex-direction: row;
+  position: absolute;
+  top: 70px;
+  &>div {
+    padding: 2vh 1vw;
+  }
 }
 
 .sidebar {
-    width: 20vw;
-    min-height: 100vh;
-    background-color: black;
-    color: white;
+  width: 20vw;
+  min-height: 100vh;
+  background-color: rgba(210, 210, 210, 0.54);
+  color: #282828;
+  box-shadow: 0 0 2px rgba(118, 118, 118, 0.78);
+  h3 {
+    font-family: 'Lato', 'sans-serif' !important;
+    //border-bottom: solid 1px black;
+    box-shadow: 0 0 2px -2px rgba(118, 118, 118, 0.78);
+  }
 }
 
 .display-lists {
-    width: 80vw;
+  width: 80vw;
+  h2 {
+    font-family: 'Maven Pro', 'sans-serif' !important;
+  }
 }
 
 #sidebar.active {
-    margin-left: -250px;
+  margin-left: -250px;
 }
