--- a/app/views/destinations/_display_lists.html.erb
+++ b/app/views/destinations/_display_lists.html.erb
@@ -1,4 +1,4 @@
-<% Destination::DESTINATION_TYPES.each do |destination_type| %>
+<% Destination::DESTINATION_TYPES.reverse.each do |destination_type| %>
   <h3> <%= destination_type[:title] %> </h3>
   <%= render partial: 'destinations/card', collection: destinations.where(status: destination_type[:status]) %>
 <% end %>
