fixed some back-end issues with navbar and sign up process

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
-<div class="navbar-user-wagon">
+<div class="navbar-user-wagon" style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1) ), url('<%= image_path "navbar_image.jpg" %>');">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "globe_getter_logo" %>
+    <%= image_tag "globe_getter_logo.png" %>
   <% end %>
 
   <!-- Right Navigation -->
