--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,11 +11,10 @@
 
       <!-- Links when logged in -->
       <!-- <%= link_to '<i class="fa fa-map-marker" aria-hidden="true"></i>
-Destinations'.html_safe, destination_select_path, class: "navbar-wagon-item navbar-wagon-link" %> -->
-
-      <%= link_to "Destinations", destination_select_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Map", map_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Dashboard", user_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
+Destinations'.html_safe, destination_select_path, class: "navbar-wagon-item-user navbar-wagon-link" %> -->
+      <%= link_to "Destinations", destination_select_path, class: "navbar-wagon-item-user navbar-wagon-link" %>
+      <%= link_to "Map", map_path, class: "navbar-wagon-item-user navbar-wagon-link" %>
+      <%= link_to "Dashboard", user_path(current_user), class: "navbar-wagon-item-user navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
