--- a/app/assets/stylesheets/components/_show_page.scss
+++ b/app/assets/stylesheets/components/_show_page.scss
@@ -1,4 +1,129 @@
-.background {
-  background-image: ('map-background.jpg');
+.dashboard-container {
+  margin: 10vh;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: stretch;
 }
+
+.dashboard-item {
+  align-self: auto;
+  border: 2px solid grey;
+  //width: 10vh;
+  margin: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  max-width: 400px;
+}
+
+
+.pie {
+  display: inline-block;
+  position: relative;
+  width: 1em;
+  height: 1em;
+  background-color: #2f3e46;
+  font-size: 7em;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.slice-right {
+  position: absolute;
+  z-index: 11;
+  background-color: #ff913b;
+  width: 100%;
+  height: 100%;
+  clip: rect(0, .5em, .5em, .5em);
+  border-radius: 50%;
+  //@include border-radius(50%);
+}
+
+.slice-left {
+  position: absolute;
+  z-index: 11;
+  background-color: #ff913b;
+  width: 100%;
+  height: 100%;
+  clip: rect(.5em, .5em, 1em, .5em);
+  border-radius: 50%;
+  //@include border-radius(50%);
+  }
+
+.percent {
+  position: absolute;
+  z-index: 20;
+  top: 3px;
+  right: 3px;
+  bottom: 3px;
+  left: 3px;
+  background: #1d2225;
+  border-radius: 50%;
+  //@include border-radius(50%);
+}
+
+.number {
+  position: absolute;
+  z-index: 30;
+  width: 100%;
+  height: 100%;
+  padding-top: 50%;
+  line-height: 0;
+  font-size: .3em;
+  color: #485c65;
+}
+
+$animation-speed: .3s;
+.slice-right {
+  -webkit-animation-delay: $animation-speed * 4;
+  -webkit-animation-duration: $animation-speed;
+  -webkit-animation-name: right-slice;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-fill-mode: forwards;
+}
+
+.slice-left {
+  -webkit-animation-delay: $animation-speed * 5;
+  -webkit-animation-duration: $animation-speed;
+  -webkit-animation-name: left-slice;
+  -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: ease-out;
+  -webkit-animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes right-slice {
+  from {
+    clip: rect(0, 50%, .5em, .5em);
+  }
+  50% {
+    clip: rect(0, 1em, .5em, .5em);
+  }
+  to {
+    clip: rect(0, 1em, 1em, .5em);
+  }
+}
+
+@-webkit-keyframes left-slice {
+  from {
+    clip: rect(.5em, .5em, 1em, .5em);
+  }
+  50% {
+    clip: rect(.5em, .5em, 1em, 0)
+  }
+  to {
+    clip: rect(.3em, .5em, 1em, 0);
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
 
