--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,42 +1,65 @@
-<div class="background">
+<body style="background: url('<%= image_path "arches.png" %>');">
+  <div class="dashboard-container">
+    <div class="dashboard-item">
+      <h1> Hello <%= @user.first_name %> </h1>
+    </div>
+    <div class="dashboard-item">
+      <h3> Your goal is to visit <%= @user.number_countries %> countries over the next <%= @user.years %> years. Keep up the hard work! </h3>
+    </div>
 
-  <h1> Hello <%= @user.first_name %>, </h1>
-  <!-- <h2><%= @user.email %> </h2> -->
-  <h3> Your goal is to visit <%= @user.number_countries %> countries over the next
-  <%= @user.years %> years. Keep up the hard work!! </h3>
+    <% denomenator = @user.years.to_f %>
 
-  <% denomenator = @user.years.to_f %>
+    <% if !@destinations.where(status: 1).empty? %>
+      <% numerator = @user.number_countries.to_f - @destinations.where(status: 1).length%>
+    <% else %>
+      <% numerator = @user.number_countries.to_f %>
+    <% end %>
+    <% result = numerator/denomenator %>
 
-  <% if !@destinations.where(status: 1).empty? %>
-    <% numerator = @user.number_countries.to_f - @destinations.where(status: 1).length%>
-  <% else %>
-    <% numerator = @user.number_countries.to_f %>
-  <% end %>
-  <% result = numerator/denomenator %>
+    <div class="dashboard-item">
+      <h3>So far, you have visited <%= @destinations.where(status: 1).length %> countries out of your goal of <%= @user.number_countries %></h3>
+    </div>
+    <div class="dashboard-item">
+      <h3> If you visit about <%= result.round %> countries every year, you will complete your goal! </h3>
+    </div>
 
-  <h3>So far, you have visited <%= @destinations.where(status: 1).length %> countries out of your goal of <%= @user.number_countries %></h3>
+      <% if !@destinations.where(status: 3).empty? %>
+        <div class="dashboard-item">
+          <h3> Here are your priority countries: </h3>
+          <div class="scrolling-wrapper">
+          <%= render partial: 'destinations/card', collection: @user.destinations.where(status: 3) %>
+          </div>
+        </div>
+      <% end %>
 
-  <h3> If you visit about <%= result.round %> countries every year, you will complete your goal! </h3>
+      <% if !@destinations.where(status: 2).empty? %>
+        <div class="dashboard-item">
+          <h3> Here is a list of places you would like to visit.</h3>
+          <div class="scrolling-wrapper">
+            <%= render partial: 'destinations/card', collection: @user.destinations.where(status: 2) %>
+          </div>
+        </div>
+      <% end %>
 
-  <% if !@destinations.where(status: 3).empty? %>
-    <h3> Here are your priority countries: </h3>
-  <% end %>
-  <div class="scrolling-wrapper">
-    <%= render partial: 'destinations/card', collection: @user.destinations.where(status: 3) %>
+      <% if !@destinations.where(status: 1).empty? %>
+        <div class="dashboard-item">
+          <h3> And here is a list of places you have been!</h3>
+          <div class="scrolling-wrapper">
+            <%= render partial: 'destinations/card', collection: @user.destinations.where(status: 1) %>
+          </div>
+        </div>
+      <% end %>
+
+
+    <div class="dashboard-item">
+      <div class="pie">
+        <div class="slice-right"></div>
+        <div class="slice-left"></div>
+        <div class="percent">
+          <div class="number">75%</div>
+        </div>
+      </div>
+    </div>
+
   </div>
-
-  <% if !@destinations.where(status: 2).empty? %>
-    <h3> Here is a list of places you would like to visit. </h3>
-  <% end %>
-  <div class="scrolling-wrapper">
-    <%= render partial: 'destinations/card', collection: @user.destinations.where(status: 2) %>
-  </div>
-
-<% if !@destinations.where(status: 1).empty? %>
-  <h3> And here is a list of places you have been!! </h3>
-<% end %>
-  <div class="scrolling-wrapper">
-    <%= render partial: 'destinations/card', collection: @user.destinations.where(status: 1) %>
-  </div>
-
-</div>
+</body>
