Added to the country show page.

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,8 +1,6 @@
 <h1><%= @country.name %></h1>
 <p>Continent: <%= @country.continent %></p>
+<p>Capital: <%= @country.capital %></p>
+<p>Currency: <%= @country.currency %></p>
 
-<% current_user.destinations.each do |destination| %>
-  <% if destination.country_id == @country_id %>
-    <%
-  <% end %>
-<% end %>
+
