--- a/app/views/shared/_navbar_no_user.html.erb
+++ b/app/views/shared/_navbar_no_user.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <a href="/" class="navbar-wagon-brand">
-    <%= image_tag('globe_getter_logo') %>
+    <%= image_tag('globe_getter_logo.png') %>
   </a>
 
   <!-- Right Navigation -->
