--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @country.name %></h1>
 <p>Continent: <%= @country.continent %></p>
 <p>Capital: <%= @country.capital %></p>
-<p>Currency: <%= @country.currency %></p>
+<p>Currency: <%= @country.currency_name %></p>
 
 
