added data to countries model

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -2,5 +2,6 @@
 <p>Continent: <%= @country.continent %></p>
 <p>Capital: <%= @country.capital %></p>
 <p>Currency: <%= @country.currency_name %></p>
+<p>Languages for Travel: <%= @country.travel_languages %> </p>
 
 
