added js for alerts

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -25,4 +25,8 @@
     font-weight: lighter;
     color: rgba(255,255,255,0.8);
   }
+  // a {
+  //   color: white;
+  //   font-weight: bold;
+  // }
 }
