--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,5 +9,5 @@
         </div>
         <div class="goal-set"><input type="submit" value="Start My Journey" formaction="<%= new_user_registration_path %>"></div>
       </form>
-
+  </div>
 </div>
