--- a/app/views/destinations/_card.html.erb
+++ b/app/views/destinations/_card.html.erb
@@ -13,11 +13,11 @@
         <!-- Unless they've visited already, show a check -->
         <% case %>
         <% when card.status == 3 %>
-           <%= link_to destinations_path(destination: {country_id: card.id, status: 1}), method: :post do %>
+           <%= link_to destination_path(card, destination: {country_id: card.id, status: 1}), method: :patch do %>
              <i class="fa fa-check-circle-o" aria-hidden="true"></i>
            <% end %>
         <% when card.status == 2 %>
-          <%= link_to destinations_path(destination: {country_id: card.id, status: 1}), method: :post do %>
+          <%= link_to destination_path(card, destination: {country_id: card.id, status: 1}), method: :patch do %>
             <i class="fa fa-check-circle-o" aria-hidden="true"></i>
           <% end %>
         <% end %>
