Finished cloudinairy and carrierwave. This allows for upload to the dashboard using the url, but is not perfect. There is still work to be done.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <body style="background: url('<%= image_path "arches.png" %>');">
   <div class="dashboard-container">
     <div class="dashboard-item">
+      <%= image_tag current_user.photo, height: 300, width: 400, crop: :fill %>
       <h1> Hello <%= @user.first_name %> </h1>
     </div>
     <div class="dashboard-item">
