--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -15,10 +15,13 @@
 <div id="destinations">
   <% if @destination.nil? %>
   <% %>
-  <%elsif @destination.notes.nil? %>
+  <%elsif @destination.first.notes.nil? %>
     Feel free to add a note for  <%= @country.name %>
   <% else %>
-    <%= render 'destinations/show', notes: notes %>
+    <% @destination.each do |destination| %>
+
+    <%= render 'destinations/show', destination: destination %>
+    <% end %>
   <% end %>
 </div>
 <div id="map" style="width: 100%; height: 600px;"></div>
