notes now can be added or updated. The button is ugly and needs to be changed, but the functionality is there. I may do more work on this, but for right now, the basic feature exists.

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -17,6 +17,11 @@
   <% %>
   <%elsif @destination.first.notes.nil? %>
     Feel free to add a note for  <%= @country.name %>
+    <%= simple_form_for([@country, @destination.first]) do |f| %>
+    <%= f.input :notes, label: false %>
+    <%= f.submit class: "btn btn-primary" %>
+<% end %>
+
   <% else %>
     <% @destination.each do |destination| %>
 
