--- a/app/views/countries/_index.hmtl.erb
+++ b/app/views/countries/_index.hmtl.erb
@@ -1,5 +1,5 @@
 
-      <h2>   <%= link_to @countries.name, countries_path(@countries) %></h2>
+      <h2>   <%= link_to @countries.first.name, countries_path(@countries.first) %></h2>
       <div class="icons">
         <%= link_to destinations_path(destination: {country_id: card.id, status: 3}), method: :post do %>
           <i class="fa fa-star-o" aria-hidden="true"></i>
